# Aspera

./: .gitignore  CMakeLists.txt
assets/models/kiwi/: kiwi.mtl
models/: cat22.mtl  sandFloor.mtl
shaders/: frag.fs  fragment_old.fs  vert.vs  vertex_old.vs
src/: Camera.cpp  Camera.h  Engine.cpp  Engine.h  InputHandler.cpp  InputHandler.h  Logic.cpp  Logic.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.h  Player.cpp  Player.h  ResourceHandler.cpp  ResourceHandler.h  Shader.cpp  Shader.h  WindowHandler.cpp  WindowHandler.h  main.cpp  tools.h
